deploy: automatic build of needed software
added download software

--- a/slurm_deploy/settings.env.in
+++ b/slurm_deploy/settings.env.in
@@ -12,7 +12,7 @@
 
 SLURM_SRC=@slurm_src@ # Where to find SLURM sources
 NODE_LIST=@slurm_nodelist@
-PMIX_INST=@pmix_install@
+PMIX_INST=@pmix_install@   # Where to install PMIx
 HWLOC_INST=@hwloc_install@ # HWLOC installation path
 SLURM_INST=@slurm_install@ # Where to install SLURM
 SLURM_USER=@slurm_user@
