--- a/slurm_deploy/deploy_ctl.conf
+++ b/slurm_deploy/deploy_ctl.conf
@@ -11,23 +11,15 @@
 #!/bin/bash
 
 NODE_LIST=""
-SLURM_USER="user"
+SLURM_USER="boriska"
 
 # common deploy settings
-DEPLOY_DIR=`pwd`/.deploy_files  #/tmp/deploy  # deploy work directory
-SRC_DIR=$DEPLOY_DIR/src             # source directory
-BUILD_DIR=$DEPLOY_DIR/build         # build directory
-INSTALL_DIR=`pwd`/.install     # install directory
+DEPLOY_DIR=`pwd`/.deploy_files          #/tmp/deploy  # deploy work directory
+SRC_DIR=$DEPLOY_DIR/src                 # source directory
+BUILD_DIR=$DEPLOY_DIR/build             # build directory
+INSTALL_DIR=/tmp/boriska/slurm_deploy   # install directory
 
 #
 SLURM_URL=https://github.com/SchedMD/slurm.git
 SLURM_COMMIT=
 #OMPI_EXTRA_CONFIG="--enable-debug"
-
-#
-SLURM_INST=$INSTALL_DIR/slurm
-PMIX_INST=$INSTALL_DIR/pmix
-UCX_INST=$INSTALL_DIR/ucx
-HWLOC_INST=$INSTALL_DIR/hwloc
-LIBEV_INST=$INSTALL_DIR/libevent
-OMPI_INST=$INSTALL_DIR/ompi
