--- a/slurm_deploy/deploy_ctl.conf
+++ b/slurm_deploy/deploy_ctl.conf
@@ -10,8 +10,8 @@
 
 #!/bin/bash
 
-NODE_LIST=""
-SLURM_USER="boriska"
+NODE_LIST=vegas[17,29]
+SLURM_USER="user"
 
 # common deploy settings
 DEPLOY_DIR=`pwd`/.deploy_files          #/tmp/deploy  # deploy work directory
