--- a/slurm_deploy/files/slurm.conf.in
+++ b/slurm_deploy/files/slurm.conf.in
@@ -30,7 +30,7 @@ SlurmdUser=@SLURM_USER@
 StateSaveLocation=@SLURM_INST@/tmp/
 SwitchType=switch/none
 TaskPlugin=task/none
-TaskPluginParam=
+TaskPluginParam=Sched
 TreeWidth=25
 UsePAM=0
 CompleteWait=0
