--- a/slurm_deploy/deploy_ctl.conf
+++ b/slurm_deploy/deploy_ctl.conf
@@ -10,16 +10,28 @@
 
 #!/bin/bash
 
-NODE_LIST=vegas[17,29]
-SLURM_USER="user"
+NODE_LIST=
+SLURM_USER=`whoami`
 
 # common deploy settings
-DEPLOY_DIR=`pwd`/.deploy_files          #/tmp/deploy  # deploy work directory
+DEPLOY_DIR=`pwd`/deploy_files           #/tmp/deploy  # deploy work directory
 SRC_DIR=$DEPLOY_DIR/src                 # source directory
 BUILD_DIR=$DEPLOY_DIR/build             # build directory
-INSTALL_DIR=/tmp/boriska/slurm_deploy   # install directory
+INSTALL_DIR=/tmp/slurm_deploy           # install directory
 
-#
-SLURM_URL=https://github.com/SchedMD/slurm.git
-SLURM_COMMIT=
-#OMPI_EXTRA_CONFIG="--enable-debug"
+SLURM_PACK=https://github.com/SchedMD/slurm/archive/slurm-17-11-0-0rc3.tar.gz
+PMIX_PACK=https://github.com/pmix/pmix/releases/download/v1.2.4/pmix-1.2.4.tar.gz
+LIBEV_PACK=https://github.com/libevent/libevent/releases/download/release-2.0.22-stable/libevent-2.0.22-stable.tar.gz
+HWLOC_PACK=https://github.com/open-mpi/hwloc/archive/hwloc-1.11.8.tar.gz
+OMPI_PACK=https://github.com/open-mpi/ompi/archive/v3.0.0.tar.gz
+UCX_URL=https://github.com/openucx/ucx.git
+
+# example:
+#REPO_NAME=<repo_name>
+#REPO_PACK=<repo_pack_url>.tar.gz
+# or:
+#REPO_URL=<repo_github>
+# optional:
+#REPO_BRANCH=<branch>
+#REPO_COMMIT=<hash>
+#REPO_CONF="--enable-debug"
