deploy: added the tepmlate of config file

--- a/slurm_deploy/deploy_ctl.conf
+++ b/slurm_deploy/deploy_ctl.conf
@@ -14,7 +14,7 @@ NODE_LIST=
 SLURM_USER=`whoami`
 
 # common deploy settings
-DEPLOY_DIR=`pwd`/deploy_files           #/tmp/deploy  # deploy work directory
+DEPLOY_DIR=`pwd`/deploy_files           # deploy work directory
 SRC_DIR=$DEPLOY_DIR/src                 # source directory
 BUILD_DIR=$DEPLOY_DIR/build             # build directory
 INSTALL_DIR=/tmp/slurm_deploy           # install directory
