Fix checkout to the specified commit.

--- a/slurm_deploy/deploy_ctl.conf
+++ b/slurm_deploy/deploy_ctl.conf
@@ -17,14 +17,15 @@ SLURM_USER=`whoami`
 DEPLOY_DIR=`pwd`/deploy_files           #/tmp/deploy  # deploy work directory
 SRC_DIR=$DEPLOY_DIR/src                 # source directory
 BUILD_DIR=$DEPLOY_DIR/build             # build directory
-INSTALL_DIR=/tmp/slurm_deploy           # install directory
+INSTALL_DIR=/tmp/slurm_deploy_artemp           # install directory
 
 SLURM_PACK=https://github.com/SchedMD/slurm/archive/slurm-17-11-0-0rc3.tar.gz
 PMIX_PACK=https://github.com/pmix/pmix/releases/download/v1.2.4/pmix-1.2.4.tar.gz
 LIBEV_PACK=https://github.com/libevent/libevent/releases/download/release-2.0.22-stable/libevent-2.0.22-stable.tar.gz
 HWLOC_PACK=https://github.com/open-mpi/hwloc/archive/hwloc-1.11.8.tar.gz
-OMPI_PACK=https://github.com/open-mpi/ompi/archive/v3.0.0.tar.gz
 UCX_URL=https://github.com/openucx/ucx.git
+OMPI_URL=git@github.com:open-mpi/ompi.git
+OMPI_COMMIT=7023853acec8843042c25f5a37cc907bc26a848e
 
 # example:
 #REPO_NAME=<repo_name>
