Change the defaults

--- a/slurm_deploy/deploy_ctl.conf
+++ b/slurm_deploy/deploy_ctl.conf
@@ -24,8 +24,8 @@ PMIX_PACK=https://github.com/pmix/pmix/releases/download/v1.2.4/pmix-1.2.4.tar.g
 LIBEV_PACK=https://github.com/libevent/libevent/releases/download/release-2.0.22-stable/libevent-2.0.22-stable.tar.gz
 HWLOC_PACK=https://github.com/open-mpi/hwloc/archive/hwloc-1.11.8.tar.gz
 UCX_URL=https://github.com/openucx/ucx.git
-OMPI_URL=git@github.com:open-mpi/ompi.git
-OMPI_COMMIT=7023853acec8843042c25f5a37cc907bc26a848e
+OMPI_URL=https://github.com/artpol84/ompi.git
+OMPI_BRANCH=sc17
 
 # example:
 #REPO_NAME=<repo_name>
