deploy: added features
- Slurm stops before cleanup
- added the OMPI file list to delete
- starts `slurmctld` before `slurmd` are started
- added the abillity to no build some progect from config,
and configures Slurm and OMPI without it
- added the munge path configure (by MUNGE_INST=<path>)
uses `/usr` by default

--- a/slurm_deploy/deploy_ctl.conf
+++ b/slurm_deploy/deploy_ctl.conf
@@ -19,15 +19,23 @@ SRC_DIR=$DEPLOY_DIR/src                 # source directory
 BUILD_DIR=$DEPLOY_DIR/build             # build directory
 INSTALL_DIR=/tmp/slurm_deploy           # install directory
 
+# Slurm settings
 SLURM_PACK=https://github.com/SchedMD/slurm/archive/slurm-17-11-0-0rc3.tar.gz
+#MUNGE_INST="" # setup this path when your munge installed not in '/usr'
+
+# OMPI settings
+OMPI_URL=https://github.com/artpol84/ompi.git
+OMPI_BRANCH=sc17
+OMPI_CONF="--enable-timing"
+
+# there are packages with which built in Slurm and OMPI by default
 PMIX_PACK=https://github.com/pmix/pmix/releases/download/v1.2.4/pmix-1.2.4.tar.gz
 LIBEV_PACK=https://github.com/libevent/libevent/releases/download/release-2.0.22-stable/libevent-2.0.22-stable.tar.gz
 HWLOC_PACK=https://github.com/open-mpi/hwloc/archive/hwloc-1.11.8.tar.gz
 UCX_URL=https://github.com/openucx/ucx.git
-OMPI_URL=https://github.com/artpol84/ompi.git
-OMPI_BRANCH=sc17
 
-# example:
+
+# template:
 #REPO_NAME=<repo_name>
 #REPO_PACK=<repo_pack_url>.tar.gz
 # or:
@@ -35,4 +43,4 @@ OMPI_BRANCH=sc17
 # optional:
 #REPO_BRANCH=<branch>
 #REPO_COMMIT=<hash>
-#REPO_CONF="--enable-debug"
+#REPO_CONF="--enable-debug --with-another=<path>"
