Use specific version of UCX

--- a/slurm_deploy/deploy_ctl.conf
+++ b/slurm_deploy/deploy_ctl.conf
@@ -32,8 +32,10 @@ OMPI_CONF="--enable-timing"
 PMIX_PACK=https://github.com/pmix/pmix/releases/download/v1.2.4/pmix-1.2.4.tar.gz
 LIBEV_PACK=https://github.com/libevent/libevent/releases/download/release-2.0.22-stable/libevent-2.0.22-stable.tar.gz
 HWLOC_PACK=https://github.com/open-mpi/hwloc/archive/hwloc-1.11.8.tar.gz
-UCX_URL=https://github.com/openucx/ucx.git
 
+# Checkout specific UCX commit
+UCX_URL=https://github.com/openucx/ucx.git
+UCX_COMMIT=412b1fed4df5f7cbef2f905f244273110a0c8991
 
 # template:
 #REPO_NAME=<repo_name>
