slurm.conf: use task/affinity plugin by default to enable proc binding.

--- a/slurm_deploy/files/slurm.conf.in
+++ b/slurm_deploy/files/slurm.conf.in
@@ -29,7 +29,7 @@ SlurmUser=@SLURM_USER@
 SlurmdUser=@SLURM_USER@
 StateSaveLocation=@SLURM_INST@/tmp/
 SwitchType=switch/none
-TaskPlugin=task/none
+TaskPlugin=task/affinity
 TaskPluginParam=Sched
 TreeWidth=25
 UsePAM=0
