Support OMPI/master using submodules now.

--- a/slurm_deploy/deploy_ctl.conf
+++ b/slurm_deploy/deploy_ctl.conf
@@ -46,3 +46,4 @@ UCX_COMMIT=412b1fed4df5f7cbef2f905f244273110a0c8991
 #REPO_BRANCH=<branch>
 #REPO_COMMIT=<hash>
 #REPO_CONF="--enable-debug --with-another=<path>"
+#REPO_USE_SUBMODULES=1 # To indicate that submodule-aware checkout should be used
