--- a/slurm_deploy/deploy_ctl.conf
+++ b/slurm_deploy/deploy_ctl.conf
@@ -20,22 +20,28 @@ BUILD_DIR=$DEPLOY_DIR/build             # build directory
 INSTALL_DIR=/tmp/slurm_deploy           # install directory
 
 # Slurm settings
-SLURM_PACK=https://github.com/SchedMD/slurm/archive/slurm-17-11-0-0rc3.tar.gz
+SLURM_URL=https://github.com/SchedMD/slurm.git
+SLURM_BRANCH=slurm-20.02
 #MUNGE_INST="" # setup this path when your munge installed not in '/usr'
 
 # OMPI settings
-OMPI_URL=https://github.com/artpol84/ompi.git
-OMPI_BRANCH=sc17
+#OMPI_PACK=https://download.open-mpi.org/release/open-mpi/v4.0/openmpi-4.0.2.tar.gz
+#OMPI_BRANCH=sc17
+OMPI_URL=git@github.com:open-mpi/ompi.git
+OMPI_branch=master
 OMPI_CONF="--enable-timing"
+OMPI_USE_SUBMODULES=1
 
 # there are packages with which built in Slurm and OMPI by default
-PMIX_PACK=https://github.com/pmix/pmix/releases/download/v1.2.4/pmix-1.2.4.tar.gz
+PMIX_PACK=https://github.com/openpmix/openpmix/releases/download/v3.1.3/pmix-3.1.3.tar.gz
 LIBEV_PACK=https://github.com/libevent/libevent/releases/download/release-2.0.22-stable/libevent-2.0.22-stable.tar.gz
 HWLOC_PACK=https://github.com/open-mpi/hwloc/archive/hwloc-1.11.8.tar.gz
+HWLOC_CONF=" --disable-cuda --disable-nvml --disable-opencl --disable-gl "
 
 # Checkout specific UCX commit
-UCX_URL=https://github.com/openucx/ucx.git
-UCX_COMMIT=412b1fed4df5f7cbef2f905f244273110a0c8991
+UCX_URL=git@github.com:openucx/ucx.git
+UCX_BRANCH=v1.6.x
+UCX_CONF="--disable-logging --disable-debug --disable-assertions --disable-params-check --enable-backtrace-detail --enable-profiling --enable-frame-pointer --enable-stats --enable-memtrack"
 
 # template:
 #REPO_NAME=<repo_name>
