slurm_deploy: misc fixes
- use partition by default (allows do not specify --partition options
  for salloc/srun)
- fix empty partition in slurm.conf when $SLURM_JOB_PARTITION not
  defined (for cases when deploy used compute-node as head-node)

--- a/slurm_deploy/files/local.conf.in
+++ b/slurm_deploy/files/local.conf.in
@@ -8,5 +8,5 @@ SlurmdTimeout=300
 
 ClusterName=@cluster_name@
 NodeName=@node_list@            CPUs=@node_cpus@ Sockets=@node_sock_num@ CoresPerSocket=@node_core_per_socket@ ThreadsPerCore=@node_thread_per_core@ State=UNKNOWN
-PartitionName=@partition@       Nodes=@node_list@ DefaultTime=120 Default=NO State=UP AllocNodes=@node_ctl@,@node_list@
+PartitionName=@partition@       Nodes=@node_list@ DefaultTime=120 Default=YES State=UP AllocNodes=@node_ctl@,@node_list@
 ControlMachine=@node_ctl@
