--- a/slurm_deploy/deploy_ctl.conf
+++ b/slurm_deploy/deploy_ctl.conf
@@ -10,7 +10,7 @@
 
 #!/bin/bash
 
-NODE_LIST=
+NODE_LIST=rock[06,19]
 SLURM_USER=`whoami`
 
 # common deploy settings
@@ -20,22 +20,21 @@ BUILD_DIR=$DEPLOY_DIR/build             # build directory
 INSTALL_DIR=/tmp/slurm_deploy           # install directory
 
 # Slurm settings
-SLURM_PACK=https://github.com/SchedMD/slurm/archive/slurm-17-11-0-0rc3.tar.gz
-#MUNGE_INST="" # setup this path when your munge installed not in '/usr'
+SLURM_PACK=https://download.schedmd.com/slurm/slurm-24.11.1.tar.bz2
+MUNGE_INST="/" # setup this path when your munge installed not in '/usr'
 
 # OMPI settings
-OMPI_URL=https://github.com/artpol84/ompi.git
-OMPI_BRANCH=sc17
+OMPI_PACK=https://download.open-mpi.org/release/open-mpi/v3.1/openmpi-3.1.6.tar.gz
 OMPI_CONF="--enable-timing"
 
 # there are packages with which built in Slurm and OMPI by default
-PMIX_PACK=https://github.com/pmix/pmix/releases/download/v1.2.4/pmix-1.2.4.tar.gz
-LIBEV_PACK=https://github.com/libevent/libevent/releases/download/release-2.0.22-stable/libevent-2.0.22-stable.tar.gz
+PMIX_PACK=https://github.com/openpmix/openpmix/releases/download/v3.2.2/pmix-3.2.2.tar.bz2
+LIBEV_PACK=https://github.com/libevent/libevent/releases/download/release-2.1.10-stable/libevent-2.1.10-stable.tar.gz
 HWLOC_PACK=https://github.com/open-mpi/hwloc/archive/hwloc-1.11.8.tar.gz
 
 # Checkout specific UCX commit
-UCX_URL=https://github.com/openucx/ucx.git
-UCX_COMMIT=412b1fed4df5f7cbef2f905f244273110a0c8991
+#UCX_URL=https://github.com/openucx/ucx.git
+#UCX_COMMIT=412b1fed4df5f7cbef2f905f244273110a0c8991
 
 # template:
 #REPO_NAME=<repo_name>
