The latest working configuration

--- a/slurm_deploy/deploy_ctl.conf
+++ b/slurm_deploy/deploy_ctl.conf
@@ -20,17 +20,23 @@ BUILD_DIR=$DEPLOY_DIR/build             # build directory
 INSTALL_DIR=/tmp/slurm_deploy           # install directory
 
 # Slurm settings
-SLURM_PACK=https://download.schedmd.com/slurm/slurm-24.11.1.tar.bz2
-MUNGE_INST="/" # setup this path when your munge installed not in '/usr'
+SLURM_URL=git@github.com:artpol84/slurm.git
+SLURM_BRANCH=allow_exit
+
+#MUNGE_INST="/" # setup this path when your munge installed not in '/usr'
 
 # OMPI settings
-OMPI_PACK=https://download.open-mpi.org/release/open-mpi/v3.1/openmpi-3.1.6.tar.gz
-OMPI_CONF="--enable-timing"
+#OMPI_PACK=https://download.open-mpi.org/release/open-mpi/v3.1/openmpi-3.1.6.tar.gz
+#OMPI_CONF="--enable-timing"
 
 # there are packages with which built in Slurm and OMPI by default
-PMIX_PACK=https://github.com/openpmix/openpmix/releases/download/v3.2.2/pmix-3.2.2.tar.bz2
-LIBEV_PACK=https://github.com/libevent/libevent/releases/download/release-2.1.10-stable/libevent-2.1.10-stable.tar.gz
-HWLOC_PACK=https://github.com/open-mpi/hwloc/archive/hwloc-1.11.8.tar.gz
+#PMIX_PACK=https://github.com/openpmix/openpmix/releases/download/v3.2.2/pmix-3.2.2.tar.bz2
+#PMIX_PACK=https://github.com/openpmix/openpmix/releases/download/v4.2.9/pmix-4.2.9.tar.bz2
+PMIX_PACK=https://github.com/openpmix/openpmix/releases/download/v5.0.6/pmix-5.0.6.tar.bz2
+#LIBEV_PACK=https://github.com/libevent/libevent/releases/download/release-2.1.10-stable/libevent-2.1.10-stable.tar.gz
+LIBEV_PACK=https://github.com/libevent/libevent/releases/download/release-2.1.12-stable/libevent-2.1.12-stable.tar.gz
+#HWLOC_PACK=https://github.com/open-mpi/hwloc/archive/hwloc-1.11.8.tar.gz
+HWLOC_PACK=https://download.open-mpi.org/release/hwloc/v2.12/hwloc-2.12.0rc1.tar.bz2
 
 # Checkout specific UCX commit
 #UCX_URL=https://github.com/openucx/ucx.git
